[package]
name = "wolfram-graphics"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/GalAster/wolfram-graphics"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
wolfram-pest = "0.2"

[dev-dependencies]

[features]
default = []
